--- a/variables.ipynb
+++ b/variables.ipynb
@@ -284,6 +284,83 @@
     "    \n",
     "anotherfunc()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Interview Questions\n",
+    "These Questions are leveled from Basic to Advance . If you have basic knowledge of variable You can try Questions above 10."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. What is a variable in Python?\n",
+    "- Answer: A variable in Python is a named container that stores data values.\n",
+    "\n",
+    "2. How do you assign a value to a variable in Python?\n",
+    "- Answer: You assign a value to a variable using the assignment operator =. For example, x = 5.\n",
+    "\n",
+    "3. Explain the rules for naming variables in Python.\n",
+    "- Answer: Variable names must start with a letter or underscore, followed by letters, numbers, or underscores. They are case-sensitive and shouldn't use reserved keywords.\n",
+    "\n",
+    "4. What is variable casting in Python?\n",
+    "- Answer: Variable casting is the process of converting a variable's data type to another type. For example, using str(), int(), or float().\n",
+    "\n",
+    "5. How can you assign values to multiple variables in one line in Python?\n",
+    "- Answer: You can assign values to multiple variables in one line like this: ``` x, y, z = \"Orange\", \"Banana\", \"Cherry\" ```\n",
+    "\n",
+    "6. What is the scope of a variable in Python?\n",
+    "- Answer: Variables in Python can have local or global scope. Local variables are confined to a specific function, while global variables are accessible everywhere.\n",
+    "\n",
+    "7. How do you print the value of a variable in Python?\n",
+    "- Answer: You can print the value of a variable using the print() function. For example, print(x) will print the value of x.\n",
+    "\n",
+    "8. What is variable shadowing?\n",
+    "- Answer: Variable shadowing occurs when a local variable has the same name as a global variable, potentially leading to confusion. Local variables take precedence over global variables within their scope.\n",
+    "\n",
+    "9. Explain the concept of variable unpacking in Python.\n",
+    "- Answer: Variable unpacking allows you to assign elements from an iterable (e.g., list, tuple) to multiple variables in a single line. For example, a, b, c = (1, 2, 3).\n",
+    "\n",
+    "10. Why is it important to choose meaningful variable names in Python?\n",
+    "- Answer: Meaningful variable names make your code more readable and maintainable. They convey the purpose of the variable and improve code comprehension.\n",
+    "\n",
+    "11. What are global variables, and how are they different from local variables?\n",
+    "\n",
+    "- Global variables are defined outside of any function and can be accessed from anywhere in the code. Local variables are declared within a specific function and can only be accessed within that function.\n",
+    "\n",
+    "12. How can you access global variables within functions?\n",
+    "\n",
+    "To access global variables within functions, you can use the global keyword before the variable name. For example: \n",
+    "``` python\n",
+    "x = \"global\"\n",
+    "\n",
+    "def myfunc():\n",
+    "    global x\n",
+    "    print(x)\n",
+    "```\n",
+    "\n",
+    "13. Can you modify a global variable from within a function?\n",
+    "\n",
+    "- Yes, you can modify a global variable from within a function by using the global keyword before the variable name to indicate that you intend to modify the global variable.\n",
+    "\n",
+    "14. What are some best practices for naming variables in Python?\n",
+    "- Best practices for naming variables include using descriptive and meaningful names, following naming conventions (e.g., using lowercase and underscores for variables), and avoiding single-letter or ambiguous names.\n",
+    "\n",
+    "15. What is a NameError in Python, and when does it occur with variables?\n",
+    "\n",
+    "- A NameError occurs in Python when a variable is used before it is defined. This error can occur if you try to access a variable that is out of scope or has not been declared.\n",
+    "\n",
+    "16. How does variable scope work inside loops, such as for and while loops?\n",
+    "\n",
+    "- Variables declared within a loop have local scope and are accessible only within that loop. They do not exist outside the loop unless explicitly defined globally.\n",
+    "\n",
+    "17. What is variable shadowing, and why should it be avoided?\n",
+    "\n",
+    "- Variable shadowing occurs when a local variable within a scope has the same name as a variable in an outer scope. It should be avoided because it can lead to confusion and unintended behavior."
+   ]
   }
  ],
  "metadata": {
