new topics added

--- a/variables.ipynb
+++ b/variables.ipynb
@@ -194,15 +194,15 @@
     "x = \"Python\"\n",
     "y = \"is\"\n",
     "z = \"awesome\"\n",
-    "print(x, y, z) #with space\n",
-    "print(x + y + z) #without space"
+    "print(x, y, z) # , gives output with space\n",
+    "print(x + y + z) # + gives output without space"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3.2 Numbers \n"
+    "#### 3.2 Printing Numbers and their sum \n"
    ]
   },
   {
@@ -221,7 +221,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3.2 Numbers and strings\n"
+    "#### 3.2 Printing Numbers and strings together\n",
+    "\n"
    ]
   },
   {
@@ -248,9 +249,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python is awesome\n"
+     ]
+    }
+   ],
    "source": [
     "x = \"awesome\" # defined outside the function\n",
     "\n",
@@ -269,9 +278,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fantastic ram\n"
+     ]
+    }
+   ],
    "source": [
     "def myfunc():\n",
     "    global x\n",
@@ -280,7 +297,7 @@
     "\n",
     "def anotherfunc():\n",
     "    y = \"ram\"\n",
-    "    print(x ,y)\n",
+    "    print(x , y)\n",
     "    \n",
     "anotherfunc()"
    ]
