lists topics added

--- a/lists.ipynb
+++ b/lists.ipynb
@@ -176,7 +176,7 @@
     "    - insert()\n",
     "    - append()\n",
     "    - extend()\n",
-    "    \n",
+    "    - zip()\n",
     "-  Removing items from list \n",
     "    - remove()\n",
     "    - pop()\n",
@@ -192,9 +192,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'blackcurrant', 'watermelon', 'watermelon', 'orange', 'kiwi', 'mango', 'orange', 'mango', 'pineapple', 'papaya']\n",
+      "[(1, 'a'), (2, 'b'), (3, 'c')]\n"
+     ]
+    }
+   ],
    "source": [
     "thislist = [\"apple\", \"banana\", \"cherry\", \"orange\", \"kiwi\", \"mango\"]\n",
     "thislist[1:3] = [\"blackcurrant\", \"watermelon\"]  # replace value at 1 and 3 index with new value\n",
@@ -204,8 +213,15 @@
     "new_list = [\"mango\", \"pineapple\", \"papaya\"]\n",
     "thislist.extend(new_list) # new new list at the end of thislist \n",
     "# The extend() method does not have to append lists, you can add any iterable object (tuples, sets, dictionaries etc.).\n",
+    "print(thislist)\n",
     "\n",
-    "print(thislist)"
+    "#with zip we can create pairs \n",
+    "list1 = [1, 2, 3]\n",
+    "list2 = ['a', 'b', 'c']\n",
+    "\n",
+    "zipped = list(zip(list1, list2))\n",
+    "\n",
+    "print(zipped)"
    ]
   },
   {
