--- a/variables.ipynb
+++ b/variables.ipynb
@@ -4,6 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Contents\n",
+    "- Variable Rules \n",
+    "- Assigning Multiple values\n",
+    "- Output variable\n",
+    "- Global variables\n",
+    "- Exercise \n",
+    "- Interview Questions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Variables in Python"
    ]
   },
@@ -18,7 +31,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### creation \n",
+    "## 1. variable Naming Rules\n",
+    "\n",
+    "Naming rules are basically like other languages \n",
+    "- must start with letter or underscore but not number ==> var , var1 , (1var)\n",
+    "- can contain (A-z, 0-9, _)  ==> var_name , var1name (1var,var name)\n",
+    "- Case sensitive (name and Name are different)\n",
+    "- mustn't use keyword name ==> continue, break , class\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### creation \n",
     "Variables are simply created by assing value to them\n"
    ]
   },
@@ -28,10 +54,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = 5\n",
-    "y = \"ram\"\n",
+    "x = \"ram\"\n",
     "\n",
-    "print(x,y)"
+    "print(x)"
    ]
   },
   {
@@ -62,21 +87,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'int'>\n",
-      "John is a 'boy'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 5\n",
-    "y = \"John \"\n",
+    "y = \"jhon\"\n",
     "print(type(x))\n",
     "print(type(y))"
    ]
@@ -89,19 +105,6 @@
     " i.e x = \"ram \" is same as x = 'ram' <br>\n",
     " and variable are case sensitive \n",
     "i.e a and A are different "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1. variable Naming Rules\n",
-    "\n",
-    "Naming rules are basically like other languages \n",
-    "- must strat with letter or underscore but not number ==> var , var1 , (1var)\n",
-    "- can contain (A-z, 0-9, _)  ==> var_name , var1name (1var,var name)\n",
-    "- Case sensitive (ram and Ram are different)\n",
-    "- mustn't use keyword name\n"
    ]
   },
   {
@@ -163,9 +166,11 @@
    "outputs": [],
    "source": [
     "x = y = z = \"orange\"\n",
+    "print(x, y, z)\n",
+    "\n",
+    "\n",
     "fruits = [\"apple\", \"banana\", \"cherry\"] \n",
     "a, b, c = fruits # unpacking\n",
-    "print(x, y, z)\n",
     "print(a,b,c)"
    ]
   },
@@ -174,8 +179,7 @@
    "metadata": {},
    "source": [
     "## 3. Variables Output \n",
-    "print() function is mostly used <br>\n",
-    "print() output multiple variable seperated by comma  "
+    "print() function is used <br>\n"
    ]
   },
   {
@@ -249,17 +253,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Python is awesome\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = \"awesome\" # defined outside the function\n",
     "\n",
@@ -278,17 +274,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fantastic ram\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def myfunc():\n",
     "    global x\n",
@@ -316,37 +304,48 @@
    "source": [
     "1. What is a variable in Python?\n",
     "- Answer: A variable in Python is a named container that stores data values.\n",
+    "***\n",
     "\n",
     "2. How do you assign a value to a variable in Python?\n",
     "- Answer: You assign a value to a variable using the assignment operator =. For example, x = 5.\n",
+    "---\n",
     "\n",
     "3. Explain the rules for naming variables in Python.\n",
     "- Answer: Variable names must start with a letter or underscore, followed by letters, numbers, or underscores. They are case-sensitive and shouldn't use reserved keywords.\n",
+    "---\n",
     "\n",
     "4. What is variable casting in Python?\n",
     "- Answer: Variable casting is the process of converting a variable's data type to another type. For example, using str(), int(), or float().\n",
+    "---\n",
     "\n",
     "5. How can you assign values to multiple variables in one line in Python?\n",
     "- Answer: You can assign values to multiple variables in one line like this: ``` x, y, z = \"Orange\", \"Banana\", \"Cherry\" ```\n",
+    "---\n",
     "\n",
     "6. What is the scope of a variable in Python?\n",
     "- Answer: Variables in Python can have local or global scope. Local variables are confined to a specific function, while global variables are accessible everywhere.\n",
+    "---\n",
     "\n",
     "7. How do you print the value of a variable in Python?\n",
     "- Answer: You can print the value of a variable using the print() function. For example, print(x) will print the value of x.\n",
+    "---\n",
     "\n",
     "8. What is variable shadowing?\n",
     "- Answer: Variable shadowing occurs when a local variable has the same name as a global variable, potentially leading to confusion. Local variables take precedence over global variables within their scope.\n",
+    "---\n",
     "\n",
     "9. Explain the concept of variable unpacking in Python.\n",
     "- Answer: Variable unpacking allows you to assign elements from an iterable (e.g., list, tuple) to multiple variables in a single line. For example, a, b, c = (1, 2, 3).\n",
+    "---\n",
     "\n",
     "10. Why is it important to choose meaningful variable names in Python?\n",
     "- Answer: Meaningful variable names make your code more readable and maintainable. They convey the purpose of the variable and improve code comprehension.\n",
+    "---\n",
     "\n",
     "11. What are global variables, and how are they different from local variables?\n",
     "\n",
     "- Global variables are defined outside of any function and can be accessed from anywhere in the code. Local variables are declared within a specific function and can only be accessed within that function.\n",
+    "---\n",
     "\n",
     "12. How can you access global variables within functions?\n",
     "\n",
@@ -358,21 +357,26 @@
     "    global x\n",
     "    print(x)\n",
     "```\n",
+    "---\n",
     "\n",
     "13. Can you modify a global variable from within a function?\n",
     "\n",
     "- Yes, you can modify a global variable from within a function by using the global keyword before the variable name to indicate that you intend to modify the global variable.\n",
+    "---\n",
     "\n",
     "14. What are some best practices for naming variables in Python?\n",
     "- Best practices for naming variables include using descriptive and meaningful names, following naming conventions (e.g., using lowercase and underscores for variables), and avoiding single-letter or ambiguous names.\n",
+    "---\n",
     "\n",
     "15. What is a NameError in Python, and when does it occur with variables?\n",
     "\n",
     "- A NameError occurs in Python when a variable is used before it is defined. This error can occur if you try to access a variable that is out of scope or has not been declared.\n",
+    "---\n",
     "\n",
     "16. How does variable scope work inside loops, such as for and while loops?\n",
     "\n",
     "- Variables declared within a loop have local scope and are accessible only within that loop. They do not exist outside the loop unless explicitly defined globally.\n",
+    "---\n",
     "\n",
     "17. What is variable shadowing, and why should it be avoided?\n",
     "\n",
