--- a/variables.ipynb
+++ b/variables.ipynb
@@ -50,13 +50,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ram\n"
+     ]
+    }
+   ],
    "source": [
-    "x = \"ram\"\n",
+    "Name = \"ram\"\n",
     "\n",
-    "print(x)"
+    "print(Name)"
    ]
   },
   {
@@ -87,9 +95,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
    "source": [
     "x = 5\n",
     "y = \"jhon\"\n",
@@ -123,13 +140,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ram\n",
+      "Orange\n",
+      "5 ram False\n"
+     ]
+    }
+   ],
    "source": [
+    "name = \"ram\"\n",
     "x, y, z = \"Orange\", \"Banana\", \"Cherry\"\n",
     "a, b, c = 5, \"ram\", False  #can assign different type of variables \n",
     "\n",
+    "print(name)\n",
     "print(x)\n",
     "print(a,b,c)"
    ]
@@ -144,11 +173,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 banana\n"
+     ]
+    }
+   ],
    "source": [
-    "x , y = 5, \"banana\", 'cherry'\n",
+    "x , y, z = 5, \"banana\", 'cherry'\n",
     "print(x, y)"
    ]
   },
@@ -161,9 +198,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "orange orange orange\n",
+      "apple banana cherry\n"
+     ]
+    }
+   ],
    "source": [
     "x = y = z = \"orange\"\n",
     "print(x, y, z)\n",
@@ -171,7 +217,7 @@
     "\n",
     "fruits = [\"apple\", \"banana\", \"cherry\"] \n",
     "a, b, c = fruits # unpacking\n",
-    "print(a,b,c)"
+    "print(a,b,c)\n"
    ]
   },
   {
@@ -191,9 +237,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python is awesome\n",
+      "Pythonisawesome\n"
+     ]
+    }
+   ],
    "source": [
     "x = \"Python\"\n",
     "y = \"is\"\n",
@@ -211,9 +266,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "5 10\n"
+     ]
+    }
+   ],
    "source": [
     "x = 5\n",
     "y = 10\n",
@@ -231,21 +295,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 six \n",
+      "5 six \n"
+     ]
+    }
+   ],
    "source": [
     "x = 5 \n",
     "z = \"six \"\n",
     "# print(x + z) # error \n",
-    "print(x, z)  "
+    "print(x, z)  \n",
+    "print(f\"{x} {z}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Global Variables \n",
+    "## 4. Global Variables - Scope\n",
     "variable that are created \n",
     "outside a function and can be used \n",
     " by everyone ,both inside of function and outside of function "
@@ -253,9 +327,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python is awesome\n"
+     ]
+    }
+   ],
    "source": [
     "x = \"awesome\" # defined outside the function\n",
     "\n",
@@ -269,23 +351,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Making variable global "
+    "## Exercise:\n",
+    "\n",
+    "create three variables:\n",
+    "- First_Name ,\n",
+    "-  Last_Name \n",
+    "- Age .\n",
+    "\n",
+    "<br> Make First_Name global and Last_Name and Age as local variable and print `ram sharma is 23 years old.`\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ram sharma is 23 years old.\n"
+     ]
+    }
+   ],
    "source": [
     "def myfunc():\n",
-    "    global x\n",
-    "x = \"fantastic\"\n",
+    "    global First_Name\n",
+    "First_Name = \"ram\"\n",
     "# print(type(x))\n",
     "\n",
     "def anotherfunc():\n",
-    "    y = \"ram\"\n",
-    "    print(x , y)\n",
+    "    Last_Name, age = \"sharma\" , 23\n",
+    "    print(f\"{First_Name} {Last_Name} is {age} years old.\")\n",
     "    \n",
     "anotherfunc()"
    ]
