--- a/functions.ipynb
+++ b/functions.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Python - Functions\n",
     "- A function is a block of code which only runs when it is called.\n",
-    "\n",
+    "- Use lowercase letters for the function name with underscores.\n",
     "- You can pass data, known as parameters, into a function.\n",
     "\n",
     "- A function can return data as a result.\n",
